# FuckVim

./: Cargo.toml  LICENSE  Makefile  README.md  README_zh.md  completion.go  go.mod  go.sum  keyboard.md  lsp_client.go  lsp_types.go  main.go  test.py  test.rs
docs/: KEYBINDINGS_en.md
plugin/: Cargo.toml
plugin/src/: lib.rs
src/: lib.rs  main.rs
src/buffer/: mod.rs
src/command/: help.rs  mod.rs
src/config/: keybindings.rs  lua_config.rs  mod.rs
src/editor/: mod.rs  status.rs  window.rs
src/error/: mod.rs
src/file_browser/: mod.rs
src/highlight/: mod.rs  tree_sitter_highlight.rs
src/highlight/queries/c/: highlights.scm
src/highlight/queries/python/: highlights.scm
src/highlight/queries/rust/: highlights.scm
src/history/: mod.rs
src/input/: mod.rs
src/plugin/: mod.rs  package_manager.rs
src/plugin/lua/: mod.rs
src/plugin/nvim_compat/: mod.rs
src/terminal/: mod.rs
src/ui/: mod.rs
src/ui/components/: code_folding.rs  minimap.rs  mod.rs  status_bar.rs  tabs.rs  terminal.rs  theme.rs
test/: test.js  test.md
